various features added

--- a/src/modules/timeline/timeline.hbs
+++ b/src/modules/timeline/timeline.hbs
@@ -1,4 +1,4 @@
-<div class="module timeline">
+<div class="module timeline" id="timeline">
     <div class="timeline-markers">
         <div class="timeline-marker">0</div>
         <div class="timeline-marker">1</div>
