added drag and drop from browser

--- a/src/modules/browser/browser-item.hbs
+++ b/src/modules/browser/browser-item.hbs
@@ -1,4 +1,4 @@
-<button type="button" class="list-group-item browser-item"
+<button type="button" class="list-group-item browser-item" id="browser-item-{{model.attributes.trackId}}"
         data-track-id="{{model.attributes.trackId}}"
         data-url="{{model.attributes.url}}">
     {{model.attributes.name}}
