--- a/styles/main.less
+++ b/styles/main.less
@@ -127,6 +127,10 @@ footer p {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
+
+    &.dragging {
+        opacity: 0.99;
+    }
 }
 
 #kick{
