added nudge control and improved pause

--- a/styles/main.less
+++ b/styles/main.less
@@ -131,24 +131,17 @@ footer p {
     &.dragging {
         opacity: 0.99;
     }
-}
-
-#kick{
-    top: 200px;
-    left: 10%;
-}
-
-#snare{
-    top: 15px;
-    left: 20%;
+    &.selected {
+        border: 1px solid #985f0d;
+    }
 }
 
 /** Browser **/
 
 .browser-item {
     width: auto !important;
+    padding: 5px 10px;
+    margin-right: 10px;
+    float: left;
 }
 
-.ghost {
-    opacity: 0.5;
-}
