--- a/src/modules/browser/browser.hbs
+++ b/src/modules/browser/browser.hbs
@@ -1,6 +1,9 @@
 <div class="module browser">
+    <div id="browser-search-container" class="col-sm-3">
+        <input id="browser-search" class="form-control" placeholder="Search for a track..."/>
+    </div>
+    <div id="browser-items" class="col-sm-9 list-group">
 
-    <div id="browser-items" class="list-group">
     </div>
 
 </div>
