fixed positioning of browser item drop and changed track selected styles

--- a/styles/main.less
+++ b/styles/main.less
@@ -116,19 +116,13 @@ body {
   .track {
     position: absolute;
 
-    background: -webkit-linear-gradient(#0086b3, #2255ff);
-    background: linear-gradient(#0086b3, #2255ff);
-
-    border: 1px solid #555;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
+    background: linear-gradient(#00abb3, #2255ff);
 
     &.dragging {
       opacity: 0.99;
     }
     &.selected {
-      border: 1px solid #985f0d;
+      background: linear-gradient(#b39f00, #ff0100);
     }
   }
 
