added header and footer to tracks track styling

--- a/src/modules/timeline/track.hbs
+++ b/src/modules/timeline/track.hbs
@@ -1,2 +1,8 @@
-<div class="track" id="{{model.attributes.trackId}}">
+<div class="track-container">
+    <div class="track-header">
+    </div>
+    <div class="track" id="{{model.attributes.trackId}}">
+    </div>
+    <div class="track-footer">
+    </div>
 </div>
