--- a/styles/main.less
+++ b/styles/main.less
@@ -113,10 +113,11 @@ body {
 
   /** Tracks **/
 
-  .track {
+  .track-container {
     position: absolute;
-
-    background: linear-gradient(#00abb3, #2255ff);
+    border-radius: 5px;
+    background-color: black;
+    border: 1px solid black;
 
     &.dragging {
       opacity: 0.99;
@@ -124,6 +125,21 @@ body {
     &.selected {
       background: linear-gradient(#b39f00, #ff0100);
     }
+
+    .track-header {
+      height: 20px;
+      background: linear-gradient(#00abb3, #2255ff);
+      border-radius: 5px 5px 0 0;
+    }
+
+    .track-footer {
+      height: 20px;
+      background: linear-gradient(#00abb3, #2255ff);
+      border-radius: 0 0 5px 5px;
+    }
+
+
+
   }
 
 }
