intergrated with backend studio project

--- a/styles/main.less
+++ b/styles/main.less
@@ -118,6 +118,7 @@ body {
     border-radius: 5px;
     background-color: black;
     border: 1px solid black;
+    box-sizing: content-box;
 
     &.dragging {
       opacity: 0.99;
@@ -137,11 +138,7 @@ body {
       background: linear-gradient(#00abb3, #2255ff);
       border-radius: 0 0 5px 5px;
     }
-
-
-
   }
-
 }
 
 /** Contextual Content **/
