--- a/src/modules/browser/browser-item.hbs
+++ b/src/modules/browser/browser-item.hbs
@@ -1,3 +1,3 @@
 <button draggable="true" type="button" class="list-group-item browser-item" id="browser-item-{{model.attributes.id}}">
-    {{model.attributes.artists.0.name}} - {{model.attributes.name}}
+    {{model.attributes.trackArtist}} - {{model.attributes.trackName}}
 </button>
